--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,12 +57,10 @@ jobs:
             - python_version: "3.10"
               compatible_torch_version: "2.3.1"
               nvidia_cuda_tags: 11.8.0-base-ubuntu20.04
-              pytorch_index_url: https://download.pytorch.org/whl/cu118
               cuda_tag: cu118
             - python_version: "3.10"
               compatible_torch_version: "2.3.1"
               nvidia_cuda_tags: 12.8.1-base-ubuntu20.04
-              pytorch_index_url: https://download.pytorch.org/whl/cu128
               cuda_tag: cu128
     steps:
       -
@@ -85,8 +83,8 @@ jobs:
         with:
           build-args: |
             NVIDIA_CUDA_TAG=${{ matrix.nvidia_cuda_tags }}
+            TORCH_CUDA_TAG=${{ matrix.cuda_tag }}
             PYTHON_VERSION=${{ matrix.python_version }}
-            TORCH_INDEX_URL=${{ matrix.pytorch_index_url }}
             COMPATIBLE_TORCH_VERSION=${{ matrix.compatible_torch_version }}
           push: true
           tags: |
