--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,11 +56,11 @@ jobs:
           include:
             - python_version: "3.10"
               compatible_torch_version: "2.3.1"
-              nvidia_cuda_tags: 11.8.0-base-ubuntu20.04
+              nvidia_cuda_docker_tag: 11.8.0-base-ubuntu20.04
               cuda_tag: cu118
             - python_version: "3.10"
               compatible_torch_version: "2.3.1"
-              nvidia_cuda_tags: 12.8.1-base-ubuntu20.04
+              nvidia_cuda_docker_tag: 12.8.1-base-ubuntu20.04
               cuda_tag: cu128
     steps:
       -
@@ -82,7 +82,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           build-args: |
-            NVIDIA_CUDA_TAG=${{ matrix.nvidia_cuda_tags }}
+            NVIDIA_CUDA_TAG=${{ matrix.nvidia_cuda_docker_tag }}
             TORCH_CUDA_TAG=${{ matrix.cuda_tag }}
             PYTHON_VERSION=${{ matrix.python_version }}
             COMPATIBLE_TORCH_VERSION=${{ matrix.compatible_torch_version }}
